lib/calc_manager_wrapper.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// 初始化计算器实例
@ffi.Native<ffi.Pointer<CalculatorInstance> Function()>()
external ffi.Pointer<CalculatorInstance> calculator_init();

/// 释放计算器实例
@ffi.Native<ffi.Void Function(ffi.Pointer<CalculatorInstance>)>()
external void calculator_free(ffi.Pointer<CalculatorInstance> instance);

/// 设置计算器模式
@ffi.Native<ffi.Void Function(ffi.Pointer<CalculatorInstance>)>()
external void calculator_set_standard_mode(
  ffi.Pointer<CalculatorInstance> instance,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<CalculatorInstance>)>()
external void calculator_set_scientific_mode(
  ffi.Pointer<CalculatorInstance> instance,
);

/// 发送命令到计算器
@ffi.Native<
  ffi.Void Function(ffi.Pointer<CalculatorInstance>, CalculatorCommand)
>()
external void calculator_send_command(
  ffi.Pointer<CalculatorInstance> instance,
  int command,
);

/// 获取结果长度
@ffi.Native<ffi.Int Function(ffi.Pointer<CalculatorInstance>)>()
external int calculator_get_result_length(
  ffi.Pointer<CalculatorInstance> instance,
);

/// 获取当前显示的结果
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<CalculatorInstance>,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
  )
>()
external int calculator_get_result(
  ffi.Pointer<CalculatorInstance> instance,
  ffi.Pointer<ffi.Char> buffer,
  int bufferSize,
);

/// 判断是否有错误
@ffi.Native<ffi.Int Function(ffi.Pointer<CalculatorInstance>)>()
external int calculator_has_error(ffi.Pointer<CalculatorInstance> instance);

/// 重置计算器
@ffi.Native<ffi.Void Function(ffi.Pointer<CalculatorInstance>)>()
external void calculator_reset(ffi.Pointer<CalculatorInstance> instance);

typedef CalculatorCommand = ffi.Int;
typedef DartCalculatorCommand = int;

final class CalculatorInstance extends ffi.Opaque {}

const int CMD_0 = 130;

const int CMD_1 = 131;

const int CMD_2 = 132;

const int CMD_3 = 133;

const int CMD_4 = 134;

const int CMD_5 = 135;

const int CMD_6 = 136;

const int CMD_7 = 137;

const int CMD_8 = 138;

const int CMD_9 = 139;

const int CMD_DECIMAL = 84;

const int CMD_ADD = 93;

const int CMD_SUBTRACT = 94;

const int CMD_MULTIPLY = 92;

const int CMD_DIVIDE = 91;

const int CMD_EQUALS = 121;

const int CMD_CLEAR = 81;

const int CMD_BACKSPACE = 83;

const int CMD_NEGATE = 80;

const int CMD_SQUARE = 111;

const int CMD_SQUARE_ROOT = 110;

const int CMD_RECIPROCAL = 114;

const int CMD_PERCENT = 118;
